# champy

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
src/: CMakeLists.txt  bitcoin-chainstate.cpp  bitcoind.cpp  block_coin_effects.cpp  block_data_adapters.cpp  block_data_adapters.h  block_data_admission.cpp  block_header_context_adapters.cpp  block_index_adapters.cpp  block_index_adapters.h  block_script_check_adapters.cpp  block_script_check_adapters.h  block_validation.cpp  block_validation.h  block_validation_adapters.h  block_validation_error.cpp  block_validation_error.h  block_validation_internal.h  block_validation_policy.cpp  block_validation_result.h  blockencodings.cpp  blockencodings.h  chain_validation.cpp  chain_validation.h  chainparamsseeds.h  chainstate.cpp  chainstate.h  chainstate_cache.h  chainstate_event_sink.h  chainstate_mempool_sync.h  coins.cpp  coins.h  coins_view_spend_state.cpp  connect_block_bench.cpp  core_block_commit_adapters.cpp  core_block_commit_adapters.h  core_block_connection_attempt.cpp  core_block_connection_attempt.h  core_block_policy.cpp  core_block_policy.h  (+18 more)
src/bench/: CMakeLists.txt  block_assemble.cpp  block_connection.cpp  blockencodings.cpp  checkblock.cpp  connectblock.cpp  consensus_spend_backend.cpp  disconnected_transactions.cpp  duplicate_inputs.cpp  load_external.cpp  mempool_ephemeral_spends.cpp  mempool_eviction.cpp  mempool_stress.cpp  merkle_root.cpp  readwriteblock.cpp
src/compat/: assumptions.h
src/consensus/: amount.cpp  amount.h  api.h  block_check.cpp  block_check.h  block_commit.cpp  block_commit.h  block_consensus_pipeline.cpp  block_consensus_pipeline.h  block_facts.cpp  block_facts.h  block_spend.cpp  block_spend.h  coin_effects.cpp  coin_effects.h  diagnostics.h  expected.h  locktime.cpp  locktime.h  merkle.cpp  merkle.h  params.h  pow.cpp  pow.h  predicates.cpp  predicates.h  script_checker.cpp  script_checker.h  script_view.cpp  script_view.h  sequence_locks.cpp  sequence_locks.h  sigops.cpp  sigops.h  snapshot_spend_state.cpp  snapshot_spend_state.h  spend_state.h  tx_check.cpp  tx_check.h  validation.h
src/kernel/: CMakeLists.txt  bitcoinkernel.cpp  bitcoinkernel.h  bitcoinkernel_wrapper.h  blockimport.cpp  blockimport.h  blockstorage.cpp  blockstorage.h  chainparams.cpp  chainparams.h  chainstate_load.cpp  chainstate_load.h  coinstats.cpp  coinstats.h  cs_main.h
src/node/: README.md  blockmanager_args.cpp  blockmanager_args.h  blockstorage.cpp  blockstorage.h  chainstate_load.cpp  chainstate_load.h  coin.cpp  context.cpp  disconnected_transactions.cpp  disconnected_transactions.h  interfaces.cpp  mempool_args.cpp  mempool_args.h  mempool_chain_sync.cpp  mempool_chain_sync.h  mempool_entry.h  mempool_limits.h  mempool_options.h  mempool_persist.cpp  mempool_removal_reason.cpp  mempool_removal_reason.h  mempool_validation.cpp  mempool_validation.h  mempool_validation_result.h  miner.cpp  miner.h  mini_miner.cpp  transaction.cpp  transaction.h  txdownloadman.h  txdownloadman_impl.cpp  txdownloadman_impl.h  txmempool.cpp  txmempool.h
src/policy/: ephemeral_policy.cpp  ephemeral_policy.h  policy.cpp  policy.h  rbf.cpp  rbf.h  truc_policy.h
src/policy/fees/: block_policy_estimator.cpp
src/primitives/: block.h
src/script/: descriptor.cpp  descriptor.h  script_check.cpp  script_check.h
src/secp256k1/: CMakeLists.txt
src/secp256k1/examples/: CMakeLists.txt
src/secp256k1/src/: CMakeLists.txt
src/test/: CMakeLists.txt  block_data_admission_tests.cpp  block_validation_adapters_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  blockmanager_tests.cpp  chain_validation_tests.cpp  chainstate_write_tests.cpp  coins_tests.cpp  consensus_amount_tests.cpp  consensus_api_consumer_tests.cpp  consensus_block_check_tests.cpp  consensus_block_commit_tests.cpp  consensus_block_consensus_pipeline_tests.cpp  consensus_block_facts_tests.cpp  consensus_block_spend_tests.cpp  consensus_conformance_tests.cpp  consensus_library_boundary.cpp  consensus_locktime_tests.cpp  consensus_predicates_tests.cpp  consensus_script_checker_tests.cpp  consensus_serialization_tests.cpp  consensus_snapshot_spend_state_tests.cpp  consensus_tx_verify_tests.cpp  core_block_policy_tests.cpp  disconnected_transactions.cpp  interfaces_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  miniminer_tests.cpp  peerman_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  rbf_tests.cpp  script_p2sh_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  streams_tests.cpp  transaction_tests.cpp  (+10 more)
src/test/data/: consensus_conformance.json
src/test/fuzz/: block.cpp  block_index.cpp  block_index_tree.cpp  cmpctblock.cpp  coins_view.cpp  deserialize.cpp  headerssync.cpp  merkle.cpp  mini_miner.cpp  p2p_headers_presync.cpp  package_eval.cpp  partially_downloaded_block.cpp  policy_estimator.cpp  rbf.cpp  transaction.cpp  tx_pool.cpp  txdownloadman.cpp  validation_load_mempool.cpp
src/test/kernel/: CMakeLists.txt  kernel_api_consumer.cpp  (+1 more)
src/validation/: block_coin_effects.cpp  block_coin_effects.h  block_connection.cpp  block_connection.h  block_connection_state.h  block_connection_trace.cpp  block_connection_trace.h  block_data_adapters.cpp  block_data_adapters.h  block_data_admission.cpp  block_data_admission.h  block_header_context_adapters.cpp  block_header_context_adapters.h  block_index_adapters.cpp  block_index_adapters.h  block_replay.cpp  block_replay.h  block_script_check_adapters.cpp  block_script_check_adapters.h  block_validation.cpp  block_validation.h  block_validation_adapters.h  block_validation_error.cpp  block_validation_error.h  block_validation_internal.h  block_validation_policy.cpp  block_validation_policy.h  chain_validation.cpp  chain_validation.h  coins_view_spend_state.cpp  coins_view_spend_state.h  connect_block_bench.cpp  connect_block_bench.h  core_block_commit_adapters.cpp  core_block_commit_adapters.h  core_block_connection_attempt.cpp  core_block_connection_attempt.h  core_block_connection_context.cpp  core_block_connection_context.h  core_block_connection_setup.cpp  (+15 more)
(+85 files in other folders)
